<resources>
    <string name="app_name">Final Task</string>
    <string name="main_fragment_label">Main Fragment</string>
    <string name="detail_fragment_label">Details Fragment</string>
    <string name="main_title">Interesting information about numbers</string>
    <string name="random_number">Random number</string>
    <string name="random_math">Random math</string>
    <string name="random_date">Random date</string>
    <string name="random_year">Random year</string>
    <string name="history">History</string>
    <string name="history_fragment_label">History Fragment</string>
    <string name="menu_light_theme">Light theme</string>
    <string name="menu_dark_theme">Dark theme</string>
    <string name="delete_all">delete all</string>
</resources>
